@@ -14,12 +14,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - {name: '3.10', python: '3.10', tox: py310}
           - {name: '3.9', python: '3.9', tox: py39}
           - {name: '3.8', python: '3.8', tox: py38}
           - {name: '3.7', python: '3.7', tox: py37}
-          - {name: '3.6', python: '3.6', tox: py36}
-          - {name: '3.5', python: '3.5', tox: py35}
-          - {name: PyPy, python: pypy3, tox: pypy3}
+          - {name: 'PyPy', python: 'pypy-3.7', tox: pypy37}
           - {name: Style, python: '3.9', tox: style}
     steps:
       - uses: actions/checkout@v2
